--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_ocr_sdk: 1.1.4
-  image_picker_for_web: 3.0.2
+  flutter_tesseract_ocr: 0.4.24
+  get_it: 7.6.6
+  image_picker: 1.0.7
 
 dev_dependencies:
   flutter_lints: ^2.0.0
