--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,15 +7,20 @@ environment:
   sdk: ">=3.0.1 <4.0.0"
 
 dependencies:
+  dio: ^5.4.0
   flutter:
     sdk: flutter
-  flutter_ocr_sdk: 1.1.4
-  flutter_tesseract_ocr: 0.4.24
+  flutter_bloc: 8.1.3
+  freezed: 2.4.6
+  freezed_annotation: 2.4.1
   get_it: 7.6.6
   image_picker: 1.0.7
+  json_annotation: 4.8.1
+  json_serializable: 6.7.1
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
+  build_runner: 2.4.7
+  flutter_lints: 2.0.0
   flutter_test:
     sdk: flutter
 
