--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   freezed: 2.4.6
   freezed_annotation: 2.4.1
   get_it: 7.6.6
-  go_router: ^13.0.1
+  go_router: 13.0.1
   image_picker: 1.0.7
   json_annotation: 4.8.1
   json_serializable: 6.7.1
@@ -27,3 +27,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/png/
