--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,9 +8,11 @@ environment:
 
 dependencies:
   dio: ^5.4.0
+  dotted_border: 2.1.0
   flutter:
     sdk: flutter
   flutter_bloc: 8.1.3
+  flutter_dropzone: 3.0.6
   freezed: 2.4.6
   freezed_annotation: 2.4.1
   get_it: 7.6.6
