--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,8 @@ environment:
   sdk: ">=3.0.1 <4.0.0"
 
 dependencies:
-  dio: ^5.4.0
+  camera: 0.10.5+9
+  dio: 5.4.0
   dotted_border: 2.1.0
   flutter:
     sdk: flutter
