--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   go_router: 13.0.1
   json_annotation: 4.8.1
   json_serializable: 6.7.1
+  pie_chart: 5.4.0
 
 dev_dependencies:
   build_runner: 2.4.7
