--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   json_annotation: 4.8.1
   json_serializable: 6.7.1
   pie_chart: 5.4.0
+  recase: ^4.1.0
 
 dev_dependencies:
   build_runner: 2.4.7
